--- a/package.json
+++ b/package.json
@@ -10,19 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
-    "@reduxjs/toolkit": "^1.9.0",
-    "axios": "^1.1.3",
-    "expo-font": "^10.2.1",
     "native-base": "^3.4.21",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
-    "react-query": "^3.39.2",
-    "react-redux": "^8.0.5"
+    "react-native-screens": "^3.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
