--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native": "0.70.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.5.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5"
   },
