--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/elements": "^1.3.6",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@reduxjs/toolkit": "^1.9.0",
     "native-base": "^3.4.21",
     "react": "18.1.0",
     "react-native": "0.70.4",
